// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: CommentThread renders with nested comments 1`] = `
<View
  style={
    Object {
      "borderColor": "lightgrey",
      "borderLeftWidth": 1,
      "paddingLeft": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     
    ccc1
     
  </Text>
  <Connect(OptionsRow)
    currentComment={
      Object {
        "children": Array [
          3,
          4,
          5,
        ],
        "content": "ccc1",
        "downvoteCount": 0,
        "id": 1,
        "upvoteCount": 0,
      }
    }
    postId={0}
  />
  <FlatList
    data={
      Array [
        Object {
          "children": Array [],
          "content": "ccc3",
          "downvoteCount": 0,
          "id": 3,
          "upvoteCount": 0,
        },
        Object {
          "children": Array [],
          "content": "ccc4",
          "downvoteCount": 0,
          "id": 4,
          "upvoteCount": 0,
        },
        Object {
          "children": Array [],
          "content": "ccc5",
          "downvoteCount": 0,
          "id": 5,
          "upvoteCount": 0,
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`Component: CommentThread renders with nested comments 2`] = `
<View
  style={
    Object {
      "borderColor": "lightgrey",
      "borderLeftWidth": 1,
      "paddingLeft": 10,
      "paddingTop": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
     
    ccc2
     
  </Text>
  <Connect(OptionsRow)
    currentComment={
      Object {
        "children": Array [],
        "content": "ccc2",
        "downvoteCount": 0,
        "id": 2,
        "upvoteCount": 0,
      }
    }
    postId={0}
  />
</View>
`;
